sorting of tables is done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular2-starter-basic",
+  "name": "mango_mini_project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
